[package]
name = "princessedit_native"
version = "0.1.0"
authors = ["Lymia Aluysia <lymia@lymia.moe>"]
edition = "2021"

[dependencies]
bytemuck = "1.7.3"
fontdb = "0.9.1"
jni = "0.19"
parking_lot = { version = "0.12.0", features = ["nightly"] }
resvg = "0.22.0"
rustybuzz = "0.5.0"
tiny-skia = "0.6.3"
usvg = "0.22.0"

[lib]
crate_type = ["cdylib"]

[profile.release]
opt-level = 3
lto = true
